Bug 1170325 - Convert js::Vector into a template alias to mozilla::Vector with a single customized default argument.  Also get rid of the CRTP support in mozilla::Vector (through mozilla::VectorBase) now that template aliasing is good enough, and make mozilla::Vector final so that people will use composition and not inheritance with it.  (Inheritance plays poorly with movability and a few other things, in addition to messing up template argument deduction matching.)  r=Waldo, patch sort of a tag-team between him and me