gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -2880,7 +2880,7 @@ bool AsyncPanZoomController::UpdateAnimation(const TimeStamp& aSampleTime,
 
   if (mAnimation) {
     bool continueAnimation = mAnimation->Sample(mFrameMetrics, sampleTimeDelta);
-    *aOutDeferredTasks = mAnimation->TakeDeferredTasks();
+    mAnimation->TakeDeferredTasks(*aOutDeferredTasks);
     if (continueAnimation) {
       if (mPaintThrottler->TimeSinceLastRequest(aSampleTime) >
           mAnimation->mRepaintInterval) {
